# ros2

./: MLP.py  README.md  afjsdklfjasdfsd  comandos  game.py  neuroevolucion.py  pasos_a_seguir.txt  robot.py  sensor.py
pong_game/: package.xml  setup.py
pong_game/launch/: pong.launch.py
pong_game/msg/: PaddlePosition.msg
pong_game/pong_game/: game_node.py  paddle_node.py
pong_interfaces/: CMakeLists.txt  package.xml
pong_interfaces/msg/: PaddlePosition.msg
src/pong_game/: package.xml  setup.cfg  setup.py
src/pong_game/launch/: pong.launch.py
src/pong_game/pong_game/: game_node.py  paddle_node.py
