<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pong_game</name>
  <version>0.0.0</version>
  <description>A ROS2 Pong game implementation</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependencias para mensajes/servicios -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Dependencias principales -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <depend>pong_interfaces</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>python3-pygame</exec_depend>

  <!-- Dependencias de test -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>